--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "reactotron-react": "^1.0.0",
+    "reactotron-react-js": "^3.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
