--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.0",
     "babel-plugin-root-import": "^6.4.1",
     "date-fns": "^2.0.0-beta.5",
+    "date-fns-tz": "^1.0.7",
     "history": "^4.10.1",
     "immer": "^4.0.1",
     "polished": "^3.4.1",
